# PeerChunks

./: Cargo.toml  config.yaml
src/: config.rs  main.rs
src/file_manager/: chunker.rs  mod.rs  replication.rs  storage.rs
src/indexing/: dht.rs  mod.rs  search.rs
src/peer/: connection.rs  discovery.rs  encryption.rs  mod.rs
src/ui/: cli.rs
