[package]
name = "peerchunks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0" 
cipher = "0.4" 
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
tempfile = "3.5"


